--- a/prototype/website/src/game-app/ui/player-status.html
+++ b/prototype/website/src/game-app/ui/player-status.html
@@ -94,7 +94,8 @@
             }
 
             #afflictions {
-                margin-left: 48px;
+                margin-left: 62px;
+                display: flex;
             }
 
             .affliction-icon {
@@ -113,9 +114,10 @@
 
             .affliction {
                 width: 24px;
+                min-width: 24px;
                 padding: 4px;
                 height: 24px;
-                margin: 8px 16px 16px;
+                margin: 4px;
                 animation: fadein 0.6s ease 1;
             }
 
