fix: pixijs onclick events does not work within shadow dom.

--- a/prototype/website/index.html
+++ b/prototype/website/index.html
@@ -15,6 +15,16 @@
     <link rel="import" href="src/game-app/app-view.html">
     <link rel="stylesheet" href="src/style/style.css">
     <title></title>
+    <style>
+        @keyframes fadein {
+                from {
+                    opacity: 0;
+                }
+                to {
+                    opacity: 1;
+                }
+            }
+    </style>
 </head>
 <body style="position: absolute;" oncontextmenu="return application.development.rightClick;">
 
