--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -46,6 +46,11 @@
                 z-index: 100;
                 width: 100%;
                 height: 100%;
+                pointer-events: none;
+            }
+
+            #interface * {
+                pointer-events: all;
             }
         </style>
         <div id="interface">
@@ -58,7 +63,7 @@
             </template>
         </div>
 
-        <canvas id="canvas"></canvas>
+        <!--<canvas id="canvas"></canvas>-->
 
     </template>
     <script>
