implement dialog support + some cleaning up.

--- a/prototype/website/src/game-app/game-view.html
+++ b/prototype/website/src/game-app/game-view.html
@@ -5,6 +5,7 @@
 <link rel="import" href="./ui/player-status.html">
 <link rel="import" href="./ui/spell-bar.html">
 <link rel="import" href="./ui/game-menu.html">
+<link rel="import" href="./ui/game-dialog.html">
 
 <!--
     @author Robin Duda
@@ -57,6 +58,7 @@
 
             <template is="dom-if" if="[[!loading]]">
                 <player-status></player-status>
+                <game-dialog></game-dialog>
                 <chat-box></chat-box>
                 <spell-bar></spell-bar>
                 <game-menu></game-menu>
