--- a/prototype/website/src/game-app/ui/spell-bar.html
+++ b/prototype/website/src/game-app/ui/spell-bar.html
@@ -183,7 +183,7 @@
                 application.onCharacterLoaded(player => {
                     this.character = player;
 
-                    inputManager.onKeysListener({
+                    input.onKeysListener({
                         down: (key) => {
                             let spellName = this.character.spells.learned[this.hotkeys.indexOf(key)];
                             this._cast(this._getSpellById(spellName));
