--- a/prototype/website/src/game-app/error-dialog.html
+++ b/prototype/website/src/game-app/error-dialog.html
@@ -63,7 +63,7 @@
             </paper-dialog-scrollable>
 
             <div class="buttons">
-                <paper-button raised class="primary flex" on-tap="close" dialog-dismiss>close</paper-button>
+                <paper-button raised class="primary flex" on-down="close" dialog-dismiss>close</paper-button>
             </div>
         </paper-dialog>
 
