--- a/prototype/website/src/game-app/character-create.html
+++ b/prototype/website/src/game-app/character-create.html
@@ -10,6 +10,7 @@
 <link rel="import" href="../../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-in-animation.html">
+<link rel="import" href="../../bower_components/polymer/lib/mixins/gesture-event-listeners.html">
 
 
 <!--
@@ -228,7 +229,7 @@
             <div hidden="[[naming]]">
                 <div class="realm-title">
                     <h4 style="display: inline-block">Select class</h4>
-                    <iron-icon on-tap="realmlist"
+                    <iron-icon on-down="realmlist"
                                icon="icons:reply"></iron-icon>
                 </div>
 
@@ -292,7 +293,7 @@
             <div hidden$="[[selection]]">
                 <div class="realm-title">
                     <h4 style="display: inline-block">Name your {{selected.name}}&nbsp;</h4>
-                    <iron-icon on-tap="showSelect"
+                    <iron-icon on-down="showSelect"
                                icon="icons:reply"></iron-icon>
                 </div>
 
@@ -316,7 +317,7 @@
     </template>
 </dom-module>
 <script>
-    class CharacterCreate extends Polymer.Element {
+    class CharacterCreate extends Polymer.GestureEventListeners(Polymer.Element) {
         ready() {
             super.ready();
             this.showSelect();
